--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 dist: trusty
 language: php
 
-php:
-  - 7.1
+php: 7.3
 
 cache:
   bundler: true
@@ -32,9 +31,10 @@ install:
   - composer install
 
   # Install Lightning.
-  - lightning install 'sqlite\://db.sqlite' headless_lightning
+  - drush site:install headless_lightning --yes --db-url sqlite://db.sqlite
+  - chmod -R +w docroot/sites/default
 
-  # Update code base to head.
+  # Update code base to HEAD.
   - composer nuke
   - composer require acquia/headless_lightning:dev-master --no-update
   - composer update
@@ -47,9 +47,10 @@ install:
 before_script:
   - drush runserver --default-server=builtin 8080 &>/dev/null &
   - chromedriver --port=4444 &
+  - cd docroot
 
 script:
-  - behat --strict --stop-on-failure
+  - phpunit -c core --group headless --debug
 
 matrix:
   fast_finish: true
