--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "cweagans/composer-patches": "^1.6.0",
         "drupal/core-composer-scaffold": "*",
         "islandora-rdm/journal_profile": "1.1.x-dev",
-        "oomphinc/composer-installers-extender": "^1.1 || ^2"
+        "oomphinc/composer-installers-extender": "^1.1 || ^2",
+        "drupal/devel_php": "^1.3"
     },
     "require-dev": {
         "drupal/devel": "^4.0",
